--- a/Kubernetes.yaml
+++ b/Kubernetes.yaml
@@ -29,8 +29,8 @@ metadata:
 spec:
   selector:
     app: insurance
-
   type: NodePort
   ports:
-    - port: 8081
-    targetPort: 8081
+  - nodePort: 31033
+    port: 8081
+    targetPort: 8081
